    - PJW Fixed dijkstra_map so that the non-tunneling monster's distances save correctly
    - PJW Edited dijkstra_map so that it also works for tunneling monsters so that I didn't have to write two algorithms
    - PJW Edited print_map so that it prints for tunneling and non-tunneling monsters
    - PJW Edited main so that you can load in saved maps, save maps, and print their distance maps.

02-23-2021:
    - PJW Added heap.c, heap.h, and corridor_path_cmp from professor's solutions
    - PJW Started writing dijkstra_map to work for non-tunneling monsters
    - PJW Wrote print_map to print out the distance map
    - PJW Ran into issue where the distances were all 0

02-18-2021:
    - PJW Fixed create_dungeon_map(), save_game(), and load_game() to be able to correctly account for running --save --load or --load --save
    - PJW Fixed arg handling in main function to allow for --save --load or --load --save

02-17-2021:
    - PJW Started to write save game function
    - PJW Wrote save_game() to write data from the dungeon to the disk
    - PJW Made number of up and downstairs into a two element int array and counted them that way so that when passed through functions their values would actually update
    - PJW Ran into bug where everything but the hardness array would write correctly
        - PJW Fixed by changing fwrite(&hardness...) to fwrite(hardness)
    - PJW Added functionality to take in load, save, or just generate parameters from the user and will warn the user if their input is incorrect

02-16-2021:
    - PJW Created types for rooms, player, and up and down staircases
    - PJW Made certain things u_int8_t that could be that type like positions, sizes, and hardness
    - PJW Wrote the load_game() function to load in the binary file
    - PJW Wrote find_room() to check if the x and y positions were located inside of a room
    - PJW Wrote find_stairs() To check if the x and y positions were an up or down staircase