@@ -11,4 +11,4 @@ This program successfully saves and loads dungeons to and from the disk. User's 
 assignment1.03:
 Patrick Wenzel pwenzel@iastate.edu
 
-This program successfully gets the distance maps for tunneling and non-tunneling monsters. This is done by using the heap.c, heap.h, and corridor_path_cmp from the professor's solutions. I also took the professor's dijkstra_corridor and edited it so that it saves the distances for all 8 directions that monsters could move. I also edited it so that it works for both tunneling and non-tunneling monsters by checking if it is a tunneling monster when adding nodes into the heap. You can run ./dungeon.o or make run, ./dungeon.o --save or make save, and ./dungeon.o --load or make load,./dungeon --load --save, or make ls or ./dungeon --save --load or make sl to perform the functions above in assignment1.02 for these commands and then also print out the distance maps.
+This program successfully gets the distance maps for tunneling and non-tunneling monsters. This is done by using the heap.c, heap.h, and corridor_path_cmp from the professor's solutions. I also took the professor's dijkstra_corridor and edited it so that it saves the distances for all 8 directions that monsters could move. I also edited it so that it works for both tunneling and non-tunneling monsters by checking if it is a tunneling monster when adding nodes into the heap. You can run ./dungeon.o or make run, ./dungeon.o --save or make save, and ./dungeon.o --load or make load,./dungeon --load --save, or make ls or ./dungeon --save --load or make sl to perform the functions above in assignment1.02 for these commands and then also print out the distance maps. For unconnected dungeons, open space that is not connected will be represented by an 'X'.
